--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "electron": "^2.0.0",
     "jest": "^22.4.3",
     "spectron": "^3.8.0"
+  },
+  "jest": {
+    "collectCoverage": true
   }
 }
