added tests; examples

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "example": "electron examples/shell.js",
     "test": "NODE_ENV=test jest"
   },
   "repository": {
